--- a/mods/equipment/README
+++ b/mods/equipment/README
@@ -1,7 +1,7 @@
-grail_test 0.3 mod: equipment
+grail_test 0.4 mod: equipment
 =============================
 
-This mod provides the standard adventuring equipment previously in default. Additions include cauldron and wooden bucket (moved into bucket mod).
+This mod provides the standard adventuring equipment previously in default. Additions include cauldron and the table, bench and shelf from Sokomine's cottages mod.
 
 The cauldron provides a cooking device for any item with both shapeless and cooking recipes. It works in much the same way as the furnace.
 
