Update textures from MTCORE32px (CC BY-SA 3.0) by Napiophelios
boats: Use rowboat.x model

--- a/README
+++ b/README
@@ -110,4 +110,5 @@ http://creativecommons.org/licenses/by-sa/3.0/
 Gratitude
 ---------
 
+To crabman77 for additional code.
 To CCD, DC_gaming, AllisonB, Xanthin, h70, dvn, brandin and all the other regular players for game testing.
