--- a/mods/equipment/README
+++ b/mods/equipment/README
@@ -8,6 +8,9 @@ The cauldron provides a cooking device for any item with both shapeless and cook
 credits
 -------
 
+Napiophelios (CC BY-SA 3.0):
+	equipment_lantern.png
+
 VanessaE:
 	bucket.png
 	bucket_lava.png
