--- a/mods/plant/README
+++ b/mods/plant/README
@@ -6,6 +6,10 @@ This mod provides plants previously in default and farming.
 Texture credits
 ===============
 
+Napophelois from MTCORE32px (CC BY-SA 3.0):
+	plant_cotton_*.png
+	plant_cotton_seed.png
+
 VanessaE (CC-BY-SA 3.0):	
 	plant_carrot.png
 	plant_dry_shrub.png
