--- a/mods/material/README
+++ b/mods/material/README
@@ -69,3 +69,7 @@ afflatus (CC BY-SA 3.0):
 	material_white_stone_tile.png
 	material_white_stone_tile_split.png
 	material_white_stone_tile_split_top.png
+
+from xdecor (WTFPL):
+	material_stone_rune.png
+	material_wood_tile.png
