--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 Sub game for the Minetest game engine [grailtest]
-==========================================================
+=================================================
 
 To use this game with Minetest, insert this repository as
   /games/grailtest
@@ -79,7 +79,7 @@ Copyright (C) 2014-2016 afflatus, Tim Hawthorn <afflatus@pathilorra.co.uk>
 
 Based on minetest_game:
 Copyright (C) 2010-2012 celeron55, Perttu Ahola <celeron55@gmail.com>
-See README.txt in each mod directory for information about other authors.
+See README in each mod directory for information about other authors.
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
