Add new textures from MTCORE

--- a/mods/plant/README
+++ b/mods/plant/README
@@ -9,6 +9,9 @@ Texture credits
 Napophelois from MTCORE32px (CC BY-SA 3.0):
 	plant_cotton_*.png
 	plant_cotton_seed.png
+	plant-Coral2.png
+	plant-Coral3.png
+	plant-Coral4.png
 
 VanessaE (CC-BY-SA 3.0):	
 	plant_carrot.png
