--- a/mods/equipment/README
+++ b/mods/equipment/README
@@ -1,4 +1,4 @@
-grail_test 0.4 mod: equipment
+grailtest 0.4 mod: equipment
 =============================
 
 This mod provides the standard adventuring equipment previously in default. Additions include cauldron and the table, bench and shelf from Sokomine's cottages mod.
