--- a/mods/food/README
+++ b/mods/food/README
@@ -1,4 +1,4 @@
-grail_test 0.3 mod: food
+grailtest 0.4 mod: food
 ========================
 
 This mod provides basic food recipes including a feast of nonvegan ones if you have mobs installed.
