--- a/mods/material/README
+++ b/mods/material/README
@@ -1,4 +1,4 @@
-grail_test 0.4 mod: material
+grailtest 0.4 mod: material
 ============================
 
 This mod provides building materials previously in default.
