--- a/mods/mineral/README
+++ b/mods/mineral/README
@@ -1,4 +1,4 @@
-grail_test 0.3 mod: mineral
+grailtest 0.4 mod: mineral
 ===========================
 
 This mod provides minerals previously in default.
