--- a/mods/plant/README
+++ b/mods/plant/README
@@ -1,5 +1,5 @@
-grail_test 0.3 mod: plant
-=========================
+grailtest 0.4 mod: plant
+========================
 
 This mod provides plants previously in default and farming.
 
