--- a/mods/tool/README
+++ b/mods/tool/README
@@ -1,4 +1,4 @@
-grail_test 0.3 mod: tool
+grailtest 0.4 mod: tool
 ========================
 
 This mod provides the standard tools previously in default, plus hoes from farming.
