--- a/mods/material/README
+++ b/mods/material/README
@@ -1,7 +1,7 @@
 grailtest 0.4 mod: material
 ============================
 
-This mod provides building materials previously in default.
+This mod provides building materials previously in default and a whole lot more.
 
 VanessaE-hdx-32 (CC-By-SA 3.0):
 	material_brick.png
