--- a/mods/mineral/README
+++ b/mods/mineral/README
@@ -1,7 +1,7 @@
 grailtest 0.4 mod: mineral
 ===========================
 
-This mod provides minerals previously in default.
+This mod provides minerals previously in default with additions from moreores.
 
 MoreOres - Calinou (CC BY-SA 3.0)
 	mineral_copper.png
