--- a/mods/tree/README
+++ b/mods/tree/README
@@ -1,3 +1,16 @@
+grailtest 0.4 mod: tree
+========================
+
+This mod provides some simple schematic trees.
+
+Original code and models by paramat
+
+Textures
+--------
+
+VanessaE: moretrees
 
 Naiophelios 
 	tree_acacia_wood.png
+
+All other textures by afflatus (CC-BY-SA 3.0)
