--- a/mods/default/README
+++ b/mods/default/README
@@ -8,7 +8,7 @@ License of source code:
 Copyright (C) 2011-2012 celeron55, Perttu Ahola <celeron55@gmail.com>
 
 Modified for grail_test:
-Copyright (C) 2014-2015 afflatus, Tim Hall <afflatus@pathilorra.co.uk>
+Copyright (C) 2014-2015 afflatus, Tim Hawthorn <afflatus@pathilorra.co.uk>
 
 This program is free software; you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
