re-added orange tree

--- a/mods/flora_pack/tree/README
+++ b/mods/flora_pack/tree/README
@@ -13,5 +13,8 @@ VanessaE: moretrees
 
 Naiophelios 
 	tree_acacia_wood.png
+	
+Textures by Felfa (CC0)
+    olive*.png
 
 All other textures by afflatus (CC-BY-SA 3.0)
